# blink

./: .flutter-plugins-dependencies  .gitignore  API_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SCREEN_MOCKUPS.md  UX_FLOW.md  analysis_options.yaml  pubspec.yaml
.cursor/: mcp.json
.cursor/rules/: docs.mdc  python-env.mdc
android/: build.gradle
android/app/: build.gradle
apps/ios/: .gitignore  pubspec.yaml
examples/: cursor_api_python_example.py
lib/: main.dart
lib/core/: constants.dart  (+1 more)
mcp-server/: blink_mcp_server.py
remote-agent-service/: .gitignore  Cargo.toml  install.sh
remote-agent-service/src/: config.rs  db.rs  error.rs  executor.rs  lib.rs  main.rs
remote-agent-service/tests/: config_tests.rs  executor_tests.rs  integration_tests.rs
remote-agent-service/tests/common/: mod.rs
rest/: .env.example  .envrc  .gitignore  conftest.py  cursor_chat_api.py  debug_stream_parse.py  device_schema.sql  final_test.py  pytest.ini  quick_test.py  requirements.txt  requirements_api.txt  start_api.sh  test_api.py  test_cursor_agent.py  test_cursor_agent_db_writes.py  test_cursor_agent_json_output.py  test_e2e_workflows.py  test_edge_cases.py  test_enhanced_agent_prompt.py  test_existing_chat_integration.py  test_manual_writes.sh  test_message_flow.py  test_message_flow.sh  test_parse_stream_json.py  test_reasoning_display.py  test_standalone_system.py  test_summary_endpoint.py  verify_tool_calls.py
rest-rust/: .env.example  .gitignore  Cargo.toml  quick_start.sh
rest-rust/cli/: main.rs
rest-rust/mcp_server/: main.rs
rest-rust/src/: config.rs  error.rs  lib.rs  main.rs
rest-rust/src/api/: agent.rs  chats.rs  devices.rs  health.rs  jobs.rs  messages.rs  metrics.rs  mod.rs
rest-rust/src/db/: cache_sync.rs  cursor_agent.rs  cursor_connection.rs  device_db.rs  internal_pool.rs  mod.rs  operations.rs  queries.rs
rest-rust/src/middleware/: circuit_breaker.rs  mod.rs  tracing.rs
rest-rust/src/models/: device.rs  job.rs  message.rs  mod.rs  request.rs
rest-rust/src/services/: agent_service.rs  chat_service.rs  device_service.rs  discovery_service.rs  http_agent_service.rs  job_service.rs  mod.rs  ssh_service.rs
rest-rust/src/utils/: bubble.rs  content.rs  metrics.rs  mod.rs  request_context.rs  retry.rs  stream_json_parser.rs  timestamp.rs
rest-rust/tests/: device_api_tests.rs  docker-compose.test.yml  error_scenario_tests.rs  http_agent_service_tests.rs  integration_agent_test.rs  integration_chats_test.rs  integration_devices_test.rs  integration_health_test.rs  integration_jobs_test.rs
rest-rust/tests/common/: mod.rs
rest-rust/tests/fixtures/: mod.rs  test_cursor_agent.sh
stream-server/: Cargo.toml  build.rs
stream-server/.cargo/: config.toml
stream-server/src/: config.rs  lib.rs  main.rs
stream-server/src/capture/: bridge.rs  mod.rs
stream-server/src/input/: injector.rs  mod.rs
stream-server/src/server/: mdns.rs  mod.rs  websocket.rs
stream-server/src/video/: gst_pipeline.rs  mod.rs
stream-server/src/webrtc_handler/: mod.rs  peer.rs  tracks.rs
stream-server/swift/: Package.swift
stream-server/swift/Sources/SCKBridge/: FrameCapture.swift  H264Encoder.swift  SCKBridge.swift  WindowEnumerator.swift
stream-server/tests/: integration_test.rs
test/: chat_service_test.dart  models_test.dart  widget_test.dart
web/: chat.html  clear-cache.html  config.js  index.html  start.sh  test-cursor-agent.html
(+208 files in other folders)
