[package]
name = "remote-agent-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "remote_agent_service"
path = "src/lib.rs"

[[bin]]
name = "remote-agent-service"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
shellexpand = "3.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
hyper = { version = "1.0", features = ["client", "http1"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

