[package]
name = "blink-api"
version = "3.0.0"
edition = "2021"
authors = ["Blink Contributors"]
description = "REST API server for Cursor chat database and cursor-agent CLI integration"

[[bin]]
name = "blink-api"
path = "src/main.rs"

[[bin]]
name = "blink-cli"
path = "cli/main.rs"

[[bin]]
name = "blink-mcp"
path = "mcp_server/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# SSH
ssh2 = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
testcontainers = "0.15"
rstest = "0.18"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

