[package]
name = "blink-stream-server"
version = "0.1.0"
edition = "2021"
authors = ["Blink Contributors"]
description = "macOS window streaming server with WebRTC and ScreenCaptureKit"

[[bin]]
name = "blink-stream"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# WebRTC
webrtc = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# mDNS discovery
mdns-sd = "0.11"

# macOS Core Graphics for input injection
core-graphics = "0.23"
core-graphics-types = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
parking_lot = "0.12"
hostname = "0.4"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


